# APIGen.ai

./: .gitignore  CLI_GUIDE.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  THEME_COMPLETE.md  apigen-cli.py  environment.template  package-lock.json  pyproject.toml  restore_and_enhance.py  setup.py  start.bat  vercel.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: generate-clients.yml
apigen_cli/: __init__.py  cli.py  config.py  watch.py
backend/: .gitignore  ALL_FIXED.md  BACKEND_COMPLETE.md  CREATE_ALL_GENERATORS.py  FIX_COMPLETE.md  GENERATE_ALL_FILES.py  INSTALL_AND_RUN.bat  USAGE.md  env.template  main.py  requirements.txt  restore_all.py  test_backend.py
backend/cli/: __init__.py  generator_cli.py
backend/examples/: __init__.py  petstore.yaml
backend/generators/: __init__.py  base_generator.py  csharp_generator.py  go_generator.py  java_generator.py  javascript_generator.py  php_generator.py  python_generator.py  rust_generator.py
backend/parsers/: __init__.py  openapi_parser.py
backend/templates/: __init__.py
backend/utils/: retry_config.py  timeout_config.py
frontend/: README.md  package.json
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/docs/: page.tsx
frontend/src/components/: CodePreview.tsx  ThemeToggle.tsx
src/app/: page.tsx
src/app/contact/: metadata.ts  page.tsx
src/app/docs/: metadata.ts  page.tsx
src/app/generator/: page.tsx
src/components/components/: header.tsx
src/components/icons/: LanguageIcons.tsx
(+4 files in other folders)
